Fix: Mobile navigation - floating add button, bottom tab bar

--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
                         </div>
                     </div>
                 </div>
+                <!-- 右下: モバイル用追加ボタン -->
+                <button class="mobile-add-btn" id="mobileAddGirlBtn" title="女の子を追加">+</button>
             </main>
 
             <!-- 右上: プロフィール編集タブ -->
